2022-01-21  Jacob Bachmeyer  <jcb@gnu.org>

	PR53427

	* testsuite/runtest.main/pr53427.exp: New file for regression test.
	* testsuite/runtest.main/nested/testsuite/pr53427.test/a.exp: Likewise.
	* testsuite/runtest.main/nested/testsuite/pr53427.test/b.exp: Likewise.

2021-06-29  Jacob Bachmeyer  <jcb@gnu.org>

	PR49250

	* runtest.exp: Adjust detection logic for deprecated broken legacy
	case of a testsuite not actually in a testsuite/ directory.

	This was never supported but happened to work in older versions.

2021-05-22  Jacob Bachmeyer  <jcb@gnu.org>

	* Makefile.am (TESTSUITE_FILES): Correct oversight.

	* configure, Makefile.in, aclocal.m4: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

	* dejagnu: Fix error message.

	* config.guess: Import patched version; patches sent upstream.

	* commands/help.sh: Add test mode in which man(1) is never
	actually invoked.  The ability to reference a manpage by absolute
	file name seems to be unique to Free systems.
	* testsuite/launcher.all/help.exp: Amend test list to use new
	testing mode in "dejagnu help" command.  This mode should also
	work on Solaris, so the logic for skipping the tests is removed.

2021-05-20  Jacob Bachmeyer  <jcb@gnu.org>

	* dejagnu: Search for a POSIX Awk and validate that at least a
	simple Awk program actually works.
	* testsuite/launcher.all/command.exp: Add tests for error produced
	when no Awk is found and a help message is requested.

	* lib/dejagnu.exp: Avoid reporting next test as UNRESOLVED when
	reporting error due to missing size(1) while loading file.

	* testsuite/lib/runtest.exp (runtest_copy_nested_testsuite_log):
	New procedure.  Dumps log from nested run into main test log.

	* testsuite/runtest.libs/utils.test: Change test for [which make]
	to [which sh] because make(1) is not always available on non-GNU
	systems but sh(1) exists on any Unix.  GNU make is often installed
	as "gmake" on non-GNU systems and may be the only "make" utility.
